--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next-themes": "^0.4.4",
     "node-appwrite": "^14.1.0",
     "react": "^18",
+    "react-colorful": "^5.6.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18",
     "react-dropzone": "^14.3.5",
