--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "appwrite": "^16.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.469.0",
     "next": "14.2.21",
@@ -34,6 +35,7 @@
     "react": "^18",
     "react-colorful": "^5.6.1",
     "react-datepicker": "^7.5.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
