--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
+    "react-number-format": "^5.4.3",
     "react-phone-number-input": "^3.4.10",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
