--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-hot-toast": "^2.4.1",
     "react-number-format": "^5.4.3",
     "react-phone-number-input": "^3.4.10",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.3",
