--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "sales-and-inventory-management",
+  "name": "prime-gene-biomedical-solutions-sales-and-inventory-management-system",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^3.9.1",
     "@mui/icons-material": "^6.2.1",
@@ -34,14 +35,14 @@
     "immer": "^10.1.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.469.0",
-    "next": "14.2.21",
+    "next": "15.1.7",
     "next-themes": "^0.4.4",
     "node-appwrite": "^14.1.0",
-    "react": "^18",
+    "react": "19.0.0",
     "react-colorful": "^5.6.1",
     "react-datepicker": "^7.5.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18",
+    "react-dom": "19.0.0",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
@@ -57,12 +58,16 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@types/node": "^20.17.10",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
     "eslint": "^8",
-    "eslint-config-next": "14.2.21",
+    "eslint-config-next": "15.1.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4"
   }
 }
