--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
+    "db:generate": "drizzle generate",
+    "db:migrate": "tsx drizzle/migrations/index.ts",
     "start": "next start",
     "lint": "next lint"
   },
@@ -32,12 +34,15 @@
     "cmdk": "^1.0.0",
     "country-state-city": "^3.2.1",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.40.0",
     "immer": "^10.1.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.469.0",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
     "node-appwrite": "^14.1.0",
+    "postgres": "^3.4.5",
     "react": "19.0.0",
     "react-colorful": "^5.6.1",
     "react-datepicker": "^7.5.0",
@@ -61,10 +66,12 @@
     "@types/node": "^20.17.10",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
+    "drizzle-kit": "^0.30.5",
     "eslint": "^8",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.19.3",
     "typescript": "^5"
   },
   "overrides": {
