--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "next": "15.1.7",
     "next-themes": "^0.4.4",
     "node-appwrite": "^14.1.0",
+    "number-to-words": "^1.2.4",
     "postgres": "^3.4.5",
     "react": "19.0.0",
     "react-colorful": "^5.6.1",
