--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "next": "15.1.7",
     "next-themes": "^0.4.4",
     "node-appwrite": "^14.1.0",
-    "number-to-words": "^1.2.4",
     "postgres": "^3.4.5",
     "react": "19.0.0",
     "react-colorful": "^5.6.1",
@@ -64,6 +63,7 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "to-words": "^4.8.0",
     "uuid": "^11.0.3",
     "xlsx": "^0.18.5",
     "zod": "^3.24.1",
