--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "generate": "drizzle-kit generate",
     "migrate": "drizzle-kit migrate",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:seed": "tsx lib/seed.ts"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -79,7 +80,7 @@
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "tsx": "^4.19.3",
+    "tsx": "^4.21.0",
     "typescript": "^5"
   },
   "overrides": {
